<resources>
    <string name="app_name">GreenCommunity</string>
    <string name="button_addAd">Add new Ad</string>
    <string name="hint_adTitle">Title</string>
    <string name="hint_adDescription">Description</string>
    <string name="button_explore">Explore Ads in your Area</string>
    <string name="hint_adPrice">Price</string>
    <string name="menu_cancelAd">Cancel</string>
    <string name="menu_addAd">Add</string>
    <string name="signUp_email">E-mail</string>
    <string name="signUp_username">Username</string>
    <string name="signUp_password">Passwort</string>
    <string name="button_signUp">Sign-Up</string>
    <string name="button_login">Login</string>
    <string name="text_SignUp">Sign-Up</string>
    <string name="text_NotLoggedIn">You are not logged in yet</string>
    <string name="text_ChooseOption">Login or Sign-up</string>
    <string name="text_login">Login</string>
    <string name="login_email">E-Mail</string>
    <string name="login_password">Password</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_logout">Logout</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_profile_picture">Select profile image</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_home">Home</string>
    <string name="text_profile">Profile</string>
    <string name="button_changeProfile">Save Changes</string>
    <string name="button_changeImg">Change Image</string>
    <string name="button_changePassword">Change Password</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

</resources>